<resources>
<<<<<<< HEAD
    <string name="app_name">SwiftCheckIn</string>
    <string name="organizer_mode">Organizer Mode</string>
    <string name="mode">Mode</string>
    <string name="AppName">SwiftCheckIn</string>
=======
    <string name="event_plus">+</string>
    <string name="AppName">SwiftCheckIn</string>
    <string name="organizer_mode">Organizer Mode</string>
    <string name="mode">Mode</string>
>>>>>>> 2dd604ac3be75a4a8f201e70a32d6ea743fe267c
    <string name="_02_00" />
    <string name="march_22_2023">March 22, 2023</string>
    <string name="_03_00">03:00</string>
    <string name="pm">PM</string>
    <string name="dash">-</string>
    <string name="upcoming">Upcoming</string>
    <string name="some_important_announcements">Some Important announcements</string>
    <string name="event_name">Event Name</string>
    <string name="_02_00_pm_03_00_pm">02:00 PM - 03:00 PM</string>
    <string name="announcement">Announcement</string>
    <string name="my_events">My Events</string>
    <string name="other_events">Other Events</string>
<<<<<<< HEAD
=======
    <string name="qr_code_selection_menu1_title">QR Code Selection</string>
    <string name="event_created_successfully_qr_menu">Event Created Successfully</string>
>>>>>>> 2dd604ac3be75a4a8f201e70a32d6ea743fe267c
</resources>