<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC">

    <!--TODO: Add view constraints - alignement to all the fields-->

    <TextView
        android:id="@+id/appName"
        android:layout_width="153dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="196dp"
        android:text="@string/swiftcheckin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/divider"
        android:layout_width="378dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="56dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mode"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="323dp"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="48dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/profile_pic"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="11dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />


    <!--   TODO: Delete on of the posterImageView-->


    <ImageView
        android:id="@+id/eventPoster1"
        android:layout_width="328dp"
        android:layout_height="86dp"
        app:srcCompat="@drawable/event_poster"
        tools:layout_editor_absoluteX="-29dp"
        tools:layout_editor_absoluteY="98dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="23dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/clock"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="184dp" />

    <ImageView
        android:id="@+id/eventPoster2"
        android:layout_width="328dp"
        android:layout_height="86dp"
        app:srcCompat="@drawable/event_poster"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="98dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/march_22_2023"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="37dp"
        android:layout_height="18dp"
        android:text="02:00"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/am_pm"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:text="@string/pm"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="352dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:text="Event Name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="70dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:text="Announcement"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="242dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:text="Some Important announcements"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="289dp" />

    <TextView
        android:id="@+id/timeDash"
        android:layout_width="4dp"
        android:layout_height="18dp"
        android:text="@string/dash"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="191dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="21dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/calendar"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="184dp" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="42dp"
        android:layout_height="18dp"
        android:text="@string/_03_00"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="191dp" />


</androidx.constraintlayout.widget.ConstraintLayout>