<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC">

    <!--TODO: Add view constraints - alignement to all the fields-->

    <TextView
        android:id="@+id/appName"
        android:layout_width="153dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="196dp"
        android:text="@string/swiftcheckin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/currMode"
        android:layout_width="400dp"
        android:layout_height="42dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/black_rectangular_background"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp"
        tools:layout_editor_absoluteY="687dp" />

    <TextView
        android:id="@+id/currMode"
        android:layout_width="148dp"
        android:layout_height="28dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/grey_circle_background"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:text="Past"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp"
        tools:layout_editor_absoluteY="64dp" />

    <TextView
        android:id="@+id/currMode"
        android:layout_width="148dp"
        android:layout_height="28dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="240dp"
        android:background="@drawable/grey_circle_background"
        android:gravity="center"
        android:text="@string/upcoming"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp"
        tools:layout_editor_absoluteY="64dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="378dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="56dp"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mode"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="323dp"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="48dp"
        android:layout_height="45dp"
        app:srcCompat="@drawable/profile_pic"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="11dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />


    <!--   TODO: Delete on of the posterImageView-->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:text="Event Name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="111dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="23dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/clock"
        tools:layout_editor_absoluteX="226dp"
        tools:layout_editor_absoluteY="225dp" />

    <TextView
        android:id="@+id/timeDash"
        android:layout_width="4dp"
        android:layout_height="18dp"
        android:text="@string/dash"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="232dp" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="37dp"
        android:layout_height="18dp"
        android:text="02:00"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="232dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="21dp"
        android:layout_height="26dp"
        app:srcCompat="@drawable/calendar"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="225dp" />

    <ImageView
        android:id="@+id/eventPoster2"
        android:layout_width="328dp"
        android:layout_height="86dp"
        app:srcCompat="@drawable/event_poster"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/am_pm"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:text="@string/pm"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="346dp"
        tools:layout_editor_absoluteY="232dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/march_22_2023"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="232dp" />

    <ImageView
        android:id="@+id/eventPoster1"
        android:layout_width="328dp"
        android:layout_height="86dp"
        app:srcCompat="@drawable/event_poster"
        tools:layout_editor_absoluteX="-36dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="42dp"
        android:layout_height="18dp"
        android:text="@string/_03_00"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="232dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="66dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/camera_icon"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="685dp" />


</androidx.constraintlayout.widget.ConstraintLayout>