<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC">

    <!--TODO: Add view constraints - alignement to all the fields-->

    <TextView
        android:id="@+id/appName"
        android:layout_width="153dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="196dp"
        android:text="@string/swiftcheckin"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/currMode"
        android:layout_width="400dp"
        android:layout_height="42dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/black_rectangular_background"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/currMode"
        android:layout_width="148dp"
        android:layout_height="28dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/grey_circle_background"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:text="Other Events"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currMode"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/currMode"
        android:layout_width="148dp"
        android:layout_height="28dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/grey_circle_background"
        android:gravity="center"
        android:text="My Events"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/currMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="SmallSp" />

    <View
        android:id="@+id/divider"
        android:layout_width="378dp"
        android:layout_height="1dp"
        android:layout_marginBottom="7dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/currMode"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:text="@string/mode"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/appName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_pic"
        tools:ignore="MissingConstraints" />


    <!--   TODO: Delete on of the posterImageView-->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="296dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="Event Name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currMode" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="23dp"
        android:layout_height="26dp"
        android:layout_marginStart="76dp"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster2"
        app:srcCompat="@drawable/clock" />

    <TextView
        android:id="@+id/timeDash"
        android:layout_width="4dp"
        android:layout_height="18dp"
        android:layout_marginTop="7dp"
        android:text="@string/dash"
        app:layout_constraintEnd_toStartOf="@+id/endTime"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster2" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="37dp"
        android:layout_height="18dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="2dp"
        android:text="02:00"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/timeDash"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="21dp"
        android:layout_height="26dp"
        android:layout_marginStart="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster1"
        app:srcCompat="@drawable/calendar" />

    <ImageView
        android:id="@+id/eventPoster2"
        android:layout_width="328dp"
        android:layout_height="86dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/event_poster" />

    <TextView
        android:id="@+id/am_pm"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="40dp"
        android:text="@string/pm"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster2" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="7dp"
        android:text="@string/march_22_2023"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster2" />

    <ImageView
        android:id="@+id/eventPoster1"
        android:layout_width="328dp"
        android:layout_height="86dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/event_poster" />

    <TextView
        android:id="@+id/endTime"
        android:layout_width="42dp"
        android:layout_height="18dp"
        android:layout_marginTop="7dp"
        android:text="@string/_03_00"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/am_pm"
        app:layout_constraintTop_toBottomOf="@+id/eventPoster2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currMode"
        app:srcCompat="@drawable/camera_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>